<resources>
    <string name="app_name">Pointer_TechnologiesV2</string>

    <string-array name="countries">
        <item>Greece</item>
        <item>Cyprus</item>
        <item>Other</item>
    </string-array>
    <string name="textCheckName">Username must be between 4 and 30 characters long.</string>
    <string name="emptyDeviceName">Device name can\'t be empty.</string>
    <string name="longDeviceName">Device name is too long.</string>
    <string name="name">Name:</string>
    <string name="textCheckEmail">This doesn\'t seem as a valid email.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="textReCheckPassword">Passwords are not matching.</string>
    <string name="ReEnterPassword">Re-Enter password:</string>
    <string name="country">Country:</string>
    <string name="licence">This is our licence agreement: (link)</string>
    <string name="licence_agree">I Agree to the licence agreement.</string>
    <string name="licence_warning">You need to accept our licence agreement.</string>
    <string name="register">Register</string>
    <string name="textCheckPassword">Password must be:\nAt least 8 characters long.\nAt least a number.</string>
    <string name="rememberMe">Remember me </string>
    <string name="pointer">Pointer Technologies</string>
    <string name="notRegistered">Sign up using e-mail</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="wrongEntries">Wrong Email/Password.</string>
    <string name="signIn">SIGN IN</string>
    <string name="deleteDeleteDialog"><font fgcolor='#F44336'>DELETE</font></string>
    <string name="cancelDeleteDialog"><font fgcolor='#4CAF50'>CANCEL</font></string>
    <string name="cancelForgotDialog"><font fgcolor='#F44336'>CANCEL</font></string>
    <string name="sendForgotDialog"><font fgcolor='#4CAF50'>SEND</font></string>
    <string name="okEditDialog"><font fgcolor='#4CAF50'>OK</font></string>
    <string name="continueSetupDialog"><font fgcolor='#007DFF'>Continue</font></string>
    <string name="WiFiSettingsSetupDialog"><font fgcolor='#007DFF'>WiFi Settings</font></string>
    <string name="setupDialogConnectWiFi"><br>We will need you to connect to the module you want to set up.\n\n</br>
    <br>If you have already done it you can press \"Continue\".\n\n</br>
    <br>Otherwise, let\'s take you to your WiFi settings. You should find a network called \"Pointer Module\".\n</br></string>
    <string name="hey">Hey %1$s </string>
    <string name="serialNumber">Serial number:\n%1$s</string>
    <string name="deviceCode">Device\'s 8-digit code:</string>
    <string name="add">ADD</string>
    <string name="returnHome">Button returning to main screen.</string>
    <string name="avatar">User\'s Avatar</string>
    <string name="changeAvatar">CHANGE AVATAR</string>
    <string name="registrationForm">Registration Form</string>
    <string name="pointerTechnologies">POINTER TECHNOLOGIES</string>
    <string name="lookingForMe">Looking for me ?</string>
    <string name="appLogo">App Logo</string>
    <string name="customName">Custom name</string>
    <string name="deviceLogo">device\'s logo</string>
    <string name="downArrow">down arrow</string>
    <string name="upArrow">up arrow</string>
    <string name="serial_number">Serial Number</string>
    <string name="editDevice">edit device</string>
    <string name="edit">Edit</string>
    <string name="deviceLocation">device\'s location</string>
    <string name="location">Location</string>
    <string name="deleteDevice">delete device</string>
    <string name="delete">Delete</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="newDeviceName">New Device\'s name</string>
    <string name="changeIcon">CHANGE ICON</string>
    <string name="sendEmail">Send Email</string>
    <string name="phoneCall">Phone Call</string>
    <string name="phone">Phone</string>
    <string name="progressSetup">Getting everything ready...</string>
    <string name="contact">CONTACT US</string>
    <string name="confirmDelete">Are you sure you want to delete this device? \n
    You will be able to use the 8-digit code again to add device.</string>
</resources>