<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:cardElevation="5dp"
    android:background="?colorBackground"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relLayoutCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <TextView
            android:id="@+id/textCardViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/customName"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logoCardView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoCardView"
            android:layout_marginTop="5dp"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"

            android:layout_marginStart="16dp"
            android:src="@drawable/ic_launcher_background"
            app:backgroundTint="?colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:contentDescription="@string/deviceLogo" />

        <ImageView
            android:id="@+id/down_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/textCardViewName"
            android:backgroundTint="?colorBackground"
            android:src="@drawable/ic_down_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"
            android:contentDescription="@string/downArrow" />

        <ImageView
            android:id="@+id/up_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/textCardViewName"
            android:backgroundTint="?colorBackground"
            android:src="@drawable/ic_up_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            android:contentDescription="@string/upArrow" />

        <TextView
            android:id="@+id/idCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/serial_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/down_arrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone">


        <RelativeLayout
            android:id="@+id/editRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/editCardView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_edit"
                android:visibility="visible"
                app:backgroundTint="?colorBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/editDevice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/editCardView"
                android:text="@string/edit"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/locationRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/editRelativeLayout"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/editRelativeLayout"
            app:layout_constraintEnd_toStartOf="@+id/deleteRelativeLayout"
            app:layout_constraintStart_toEndOf="@+id/editRelativeLayout"
            app:layout_constraintTop_toTopOf="@+id/editRelativeLayout"
            app:layout_constraintVertical_bias="0.0">


            <ImageView
                android:id="@+id/locationCardView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="?colorBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_location"
                android:visibility="visible"
                android:contentDescription="@string/deviceLocation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/locationCardView"
                android:text="@string/location"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/deleteRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@+id/locationRelativeLayout"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/editRelativeLayout"
            app:layout_constraintTop_toTopOf="@+id/editRelativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <ImageView
                android:id="@+id/deleteCardView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="?colorBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_delete"
                android:visibility="visible"
                android:contentDescription="@string/deleteDevice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/deleteCardView"
                android:text="@string/delete"
                android:textSize="16sp" />
        </RelativeLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/vibrationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/vibration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRelativeLayout"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/soundSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRelativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>